--- a/flask_wed/myweb/app/templates/index.html
+++ b/flask_wed/myweb/app/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Suicide Ideation website </title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='dist/assets/favicon.ico') }}" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Suicide Ideation</a>
+            <a class="navbar-brand" href="#page-top">{{title}}</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -44,9 +44,9 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">suicide ideation</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by
-                        Start Bootstrap.</h2>
+                    <h1 class="mx-auto my-0 text-uppercase">{{big_word}}</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">“What lies behind us and what lies ahead of us are tiny matters to what lies within us.” <br> ~ Ralph Waldo Emerson ~        
+                     </h2>
                     <a class="btn btn-primary" href="#about">Get Started</a>
                 </div>
             </div>
@@ -57,16 +57,15 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8">
-                    <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
+                    <h2 class="text-white mb-4">Suicidal Ideation Project Care Service</h2>
                     <p class="text-white-50">
-                        Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now,
-                        simply download the template on
-                        <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                        The theme is open source, and you can use it for any purpose, personal or commercial.
+                        自殺，造成不能挽回的遺憾、留給親友極大的傷痛，對個人、家庭、社會都造成極大的損失，為此，本部除積極推動心理健康促進，也透過安心專線1925，提供心理諮詢服務並即時搶救因壓力或憂鬱的自殺企圖者。
+                       <br> <a href="https://www.mohw.gov.tw/cp-16-19209-1.html">the preview page.</a>
+                        <br>本部於94年12月開辦安心專線(0800-788-995)，提供民眾24小時全年無休的電話心理諮詢服務。
                     </p>
                 </div>
             </div>
-            <img class="img-fluid" src="{{ url_for('static', filename='dist/assets/img/ipad.png') }}" alt="..." />
+            <img class="img-fluid" src="{{ url_for('static', filename='dist/assets/') }}" alt="..." />
         </div>
     </section>
     <!-- Projects-->
@@ -75,7 +74,7 @@
             <!-- Featured Project Row-->
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                 <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0"
-                        src="{{ url_for('static', filename='dist/assets/img/bg-masthead.jpg') }}" alt="..." /></div>
+                        src="{{ url_for('static', filename='dist/assets/img/ipad.png') }}" alt="..." /></div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>Shoreline</h4>
@@ -174,7 +173,9 @@
             </div>
         </div>
     </section>
+
     <!-- Contact-->
+   
     <section class="contact-section bg-black">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5">
@@ -182,9 +183,10 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
+                           
+                            <h4 class="text-uppercase m-0">Ministry of Health and Welfare</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                            <div class="small text-black-50">115204 台北市南港區忠孝東路6段488號</div>
                         </div>
                     </div>
                 </div>
@@ -202,23 +204,23 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
+                            <h4 class="text-uppercase m-0">PHONE</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">+1 (555) 902-8832</div>
+                            <div class="small text-black-50">(02)8590-6666 </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="social d-flex justify-content-center">
                 <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                <a class="mx-2" href="https://pse.is/5ftlyz"><i class="fab fa-facebook-f"></i></a>
+                <a class="mx-2" href="https://pse.is/5f3t9k"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Your Website 2021</div>
+        <div class="container px-4 px-lg-5">Copyright &copy; Our Website 2023</div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -232,4 +234,3 @@
 </body>
 
 </html>
-view rawindex.html hosted with ❤ by GitHub
