--- a/Suicidal_dashfile/templates/index.html
+++ b/Suicidal_dashfile/templates/index.html
@@ -35,6 +35,10 @@
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dash/app1">Lifesuicides</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dash/app3">Dash</a></li>
+                   
+                
                 </ul>
             </div>
         </div>
